# Compulsory3_3DProg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Mesh/: Box.cpp  Box.h  LightBox.cpp  LightBox.h  Line.cpp  Line.h  NPC.cpp  NPC.h  Plane.cpp  Plane.h  Surface.cpp  Surface.h
core/: Camera.h  FragmentShader.frag  LightShader.frag  LightShader.vert  Shader.h  Vertex.h  glad.c  testingthingmain.cpp
core/Mesh/: Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
